# scratch2

./: .gitignore  CMakeLists.txt  Readme.md  scratch2.sln
scratch2/: Todo.txt  s2cirbuf.h  s2dict.h  s2fastdict.h  s2fiber.h  s2file.h  s2func.h  s2hashtable.h  s2list.h  s2ref.h  s2set.h  s2string.h  s2stringpath.h  s2test.h  scratch2.vcxproj  scratch2.vcxproj.filters  test.cpp
tests/: impl.cpp  structs.cpp  structs.h  test_cirbuf.cpp  test_dict.cpp  test_fiber.cpp  test_file.cpp  test_func.cpp  test_hashtable.cpp  test_list.cpp  test_ref.cpp  test_set.cpp  test_string.cpp  test_stringpath.cpp  tests.cpp
